packages/cjs-to-esm/test/snapshots/package-corpus/core-js/actual/error/is-error.js
import parent from "../../stable/error/is-error";
import "../../modules/esnext.error.is-error";
const _cjs_default = parent;
export default _cjs_default;
